<resources>
    <string name="app_name">Clennygan</string>
    <string name="startup_button_login">Log-In</string>
    <string name="startup_button_signup">Sign-Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="login_button_text">Log-in</string>
    <string name="signup_button_text">Sign-up</string>
    <string name="title_activity_maps">Map</string>
    <string name="signup_first_name">first name</string>
    <string name="signup_last_name">last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="button_signout">SignOut</string>
    <string name="button_apply">Apply</string>
    <string name="error_profile_incomplete">Please complete your profile</string>
</resources>