<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">


        <ImageView
            android:id="@+id/photoIV"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_width"
            android:paddingBottom="8dp"
            android:rotationX="0"
            android:src="@drawable/default_pic" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoIV"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTIL"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last name"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastNameTIL"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTIL"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ageTIL"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bioTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightTIL"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bioET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bio"
                android:inputType="text"
                android:windowSoftInputMode="adjustPan">


            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/radio1layout"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bioTIL"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_height"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/hint_gender" />


            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_height"
                android:layout_weight="2"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <RadioButton
                    android:id="@+id/radioMale1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_male" />

                <RadioButton
                    android:id="@+id/radioFemale1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_female" />




            </RadioGroup>







        </LinearLayout>


        <LinearLayout
            android:id="@+id/radio2layout"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio1layout"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preferredGenderTV"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_height"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="Preferred Gender"/>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_height"
                android:layout_weight="2"
                android:paddingBottom="8dp"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_male"/>

                <RadioButton
                    android:id="@+id/radioFemale2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_female"/>




            </RadioGroup>



        </LinearLayout>



        <Button
            android:id="@+id/applyButton"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            style="@style/StandardButton"
            android:layout_below="@id/radio2layout"
            android:text="@string/button_apply"
            >
        </Button>

        <Button
            android:id="@+id/signoutButton"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            style="@style/StandardButton"
            android:layout_below="@id/applyButton"
            android:text="@string/button_signout"
            >

        </Button>



    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#aaaaaaaa"
        android:orientation="horizontal">



    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>